# py-findwords

./: .gitignore  README.md  build.sh  check-code.sh  findwords.toml  pyproject.toml
docker/: Dockerfile  README.md  build.sh
findwords/: __init__.py
