# Project configuration for findwords.
#
# The build process uses the Python "build" tool as the build front-end and
# setuptools as the build back-end. See comments in [build-system], below.

# -----------------------------------------------------------------------------
# Project configuration
# -----------------------------------------------------------------------------

[project]
name = "findwords"
# Version is resolved from the findwords.VERSION constant. README is also
# dynamically discovered. See [tools.setuptools.dynamic], below.
dynamic = ["version", "readme"]
dependencies = [
  "click>=8.1.7",
]
description = "A fast word finder, suitable for Scrabble or Words with Friends"
requires-python = ">= 3.11"
authors = [
  {name = "Brian Clapper", email = "bmc@clapper.org"}
]
maintainers = [
  {name = "Brian Clapper", email = "bmc@clapper.org"}
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bmc/py-findwords"

[project.scripts]
findwords = "findwords:main"

# -----------------------------------------------------------------------------
# Build configuration
# -----------------------------------------------------------------------------

[build-system]
# Use https://github.com/pypa/build
# (python -m build)
# See https://packaging.python.org/en/latest/glossary/#term-Build-Frontend
# and https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.dynamic]
version = {attr = "findwords.VERSION"}
readme = {file = ["README.md"]}

# -----------------------------------------------------------------------------
# Tool-specific configurations
# -----------------------------------------------------------------------------

[tool.black]
line-length = 79
target-version = ['py311']
extend-exclude = '''
^/venv
'''

[tool.isort]
profile = "black"
src_paths = ["*.py"]

# No test package yet. (This is a command utility that relies on user-input.)
# Testing it automatically is challenging.
#[tool.pytest.ini_options]
#pythonpath = ["."]

[tool.pyright]
# pyright is a type checker.
venvPath = "venv"
include = ["./*.py"]
exclude = ["./tasks.py", "bin"]

